# AiTrader

./: .env  .env.example  .gitignore  LICENSE  README.md  new.md
agent/: .env.example  DESIGN.md  README.md  requirements-dev.txt  requirements.txt
agent/core/: __init__.py  config.py  event_manager.py  exceptions.py  http_client.py  logging_config.py  okx_client.py  rust_bridge.py  types.py
agent/llm/: __init__.py  main.py
agent/llm/api/: __init__.py  analysis.py  chat.py  events.py  health.py
agent/llm/schemas/: analysis.py  chat.py
agent/llm/services/: __init__.py  conversation_manager.py  deepseek_client.py  strategy_analyzer.py
agent/mcp/: registry.py  server.py
agent/mcp/tools/: __init__.py  account.py  market.py  trade.py  utils.py
agent/scripts/: run_agent.py
agent/tests/: test_api_analysis.py  test_api_chat.py  test_chat_tools.py  test_config.py  test_conversation_manager.py  test_deepseek_client.py  test_strategy_analyzer.py
backend/: .env.example  .gitignore  Cargo.toml  README.md
backend/bins/api-server/: Cargo.toml
backend/bins/api-server/src/: config.rs  main.rs
backend/bins/trader-cli/: Cargo.toml
backend/bins/trader-cli/src/: main.rs
backend/crates/core/: Cargo.toml  README.md
backend/crates/core/src/: config.rs  db.rs  lib.rs  types.rs
backend/crates/deepseek/: .env.example  Cargo.toml  README.md
backend/crates/deepseek/src/: client.rs  lib.rs  schema.rs
backend/crates/mcp/: .env.example  Cargo.toml  README.md
backend/crates/mcp/src/: account.rs  lib.rs  market.rs  process.rs  server.rs  trade.rs  types.rs
backend/crates/okx/: .env.example  Cargo.toml  README.md
backend/crates/okx/src/: client.rs  error.rs  lib.rs  models.rs
backend/src/: agent_client.rs  agent_events.rs  agent_subscriber.rs  db.rs  main.rs  order_sync.rs  server_config.rs  settings.rs  strategy_trigger.rs  types.rs
backend/src/okx/: client.rs  error.rs  mod.rs  models.rs
backend/src/routes/: account.rs  market.rs  mod.rs  model.rs
backend/src/volatility_trigger/: mod.rs
config/: config.yaml.example
doc/: API.md  agent-ws-design.md  agent.md  backend-architecture.md  database.md  mcp.md  order-lifecycle.md  position-sync.md  prompt.md  strategy_trigger.md  volatility_trigger.md
frontend/: .env.example  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
frontend/src/api/: account.ts  client.ts  market.ts  model.ts  orders.ts  types.ts
frontend/src/components/: AutomationStatusCard.tsx  BalancesTable.tsx  EquityCurveCard.tsx  FillsTable.tsx  MarketStrip.tsx  MultiTickerCard.tsx  OpenOrdersTable.tsx  OrderBookTable.tsx  OrderForm.tsx  OrderHistoryTable.tsx  PositionCard.tsx  PositionsHistoryCard.tsx  PositionsHistoryTable.tsx  PositionsTable.tsx  PriceChart.tsx  RecentTradesTable.tsx  RocketBadge.tsx  StrategyChatCard.tsx  SymbolSelector.tsx  TickerCard.tsx  TradeActivityList.tsx
frontend/src/hooks/: constants.ts  useBalanceSnapshots.ts  useBalances.ts  useFills.ts  useInitialEquity.ts  useLatestBalanceSnapshot.ts  useMultipleTickers.ts  useOpenOrders.ts  useOrderBook.ts  useOrderHistory.ts  usePositionHistory.ts  usePositions.ts  useRecentTrades.ts  useStrategyChat.ts  useStrategyRunner.ts  useTicker.ts
frontend/src/pages/Account/: index.tsx
frontend/src/pages/Console/: index.tsx
frontend/src/pages/Dashboard/: index.tsx
frontend/src/pages/Trade/: index.tsx
frontend/src/store/: useSymbolStore.ts
frontend/src/utils/: branding.ts  pnl.ts
nginx/: build.sh  deploy.sh
