[workspace]
members = [
    "crates/core",
    "crates/okx",
    "crates/deepseek",
    "crates/mcp",
    "bins/trader-cli",
    "bins/api-server",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.19"
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "time", "io-util", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
dotenvy = "0.15"
axum = { version = "0.7", features = ["macros", "json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
config = "0.14"
tracing-appender = "0.2"
async-openai = "0.23"
serde_yaml = "0.9"
tokio-postgres = "0.7"
