[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ai_core = { path = "../../crates/core" }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
okx = { path = "../../crates/okx" }
mcp_adapter = { path = "../../crates/mcp" }
deepseek = { path = "../../crates/deepseek" }
tracing-appender = { workspace = true }
