[package]
name = "trader-cli"
version = "0.1.0"
edition = "2021"

[features]
default = ["okx", "deepseek", "mcp"]
okx = ["dep:okx"]
deepseek = ["dep:deepseek"]
mcp = ["dep:mcp_adapter"]

[dependencies]
ai_core = { path = "../../crates/core" }
anyhow = { workspace = true }
clap = { workspace = true }
okx = { path = "../../crates/okx", optional = true }
deepseek = { path = "../../crates/deepseek", optional = true }
mcp_adapter = { path = "../../crates/mcp", optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
