[package]
name = "deepseek"
version = "0.1.0"
edition = "2021"

[dependencies]
ai_core = { path = "../core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
async-openai = { workspace = true }
okx = { path = "../okx" }
mcp_adapter = { path = "../mcp" }

[[bin]]
name = "deepseek-cli"
path = "src/bin/deepseek_cli.rs"
