[package]
name = "mcp_adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
ai_core = { path = "../core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[[bin]]
name = "mcp-cli"
path = "src/bin/mcp_cli.rs"
