[package]
name = "mcp_adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
ai_core = { path = "../core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", tag = "rmcp-v0.8.3", default-features = false, features = ["server", "macros", "transport-io", "base64"] }
okx = { path = "../okx" }
chrono = { workspace = true }
tracing-appender = { workspace = true }

[[bin]]
name = "mcp-demo-server"
path = "src/bin/mcp_demo_server.rs"
